tests/cmp/neg-dc-label-parsing-01.golden
Parse Error:
tests/cmp/neg-dc-label-parsing-01.trp:2:33: parse error
  (while parsing DC label)
  2 | let val x = 42 raisedTo `<alice bob>`
    |                                 ^
  unexpected identifier 'bob'
  expected ';'

Suggestion: In DC labels, use ';' to separate confidentiality and integrity.
  Syntax: `< confidentiality ; integrity >`
  Example: `< alice ; bob >`

